# commi

./: .frappe_cloud.yml  .gitignore  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.simple  GITHUB_SETUP.md  LICENSE  MANIFEST.in  Procfile  README.md  UPLOAD_COMMANDS.md  __init__.py  build.json  deploy-cloud.sh  docker-compose.simple.yml  docker-compose.yml  hooks.py  hooks_minimal.py  install_fresh.sh  install_without_assets.sh  k8s-deployment.yml  login.html  modules.txt  package.json  patches.txt  pyproject.toml  railway-start.sh  railway.json  release.sh  runtime.txt  setup.py  style.css  upload_to_github.bat
.github/workflows/: deploy.yml
api/: leave_allocation.py
aspirehr/: __init__.py  api.py
aspirehr/human_resources/: __init__.py
aspirehr/human_resources/doctype/: __init__.py
aspirehr/integrations/: __init__.py  biometric.py
aspirehr/integrations/doctype/: __init__.py
aspirehr/public/css/: dashboard.css
aspirehr/public/js/: dashboard.js
aspirehr/templates/www/: dashboard.html
aspirehr/www/: __init__.py  dashboard.py
docs/: dynamic_leave_allocation.md
human_resources/: utils.py
human_resources/doctype/attendance/: attendance.json
human_resources/doctype/attendance_punch/: attendance_punch.json
human_resources/tests/: test_leave_allocation.py
notifications/: __init__.py
patches/v1_0/: setup_aspirehr_data.py
payroll/: utils.py
public/css/: aspirehr.css
public/js/: aspirehr.js  employee_list.js  leave_allocation.js
setup/: install.py  uninstall.py
startup/: boot_session.py
(+10 files in other folders)
