[project]
name = "aspirehr"
authors = [
    { name = "Your Company", email = "admin@yourcompany.com" },
]
description = "Modern HR and Payroll Management System"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }
dependencies = [
    "frappe>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/yourcompany/aspirehr"
Repository = "https://github.com/yourcompany/aspirehr.git"
Documentation = "https://github.com/yourcompany/aspirehr/wiki"
"Bug Tracker" = "https://github.com/yourcompany/aspirehr/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",   # assertRaises(Exception) - should be more specific
    "B018",   # useless expression, not assigned to anything
    "B023",   # function doesn't bind loop variable - will have last iteration's value
    "B904",   # raise inside except without from
    "E101",   # indentation contains mixed spaces and tabs
    "E402",   # module level import not at top of file
    "E501",   # line too long
    "F401",   # imported but unused
    "F403",   # unable to detect undefined names
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
